// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodaysWindows captures the normal clean-day compact summary hierarchy 1`] = `
<div>
  <div>
    <div
      class="mb-4 flex items-center justify-between gap-3"
    >
      <div
        class="flex min-w-0 items-center gap-2"
      >
        <h2
          class="label-black"
        >
          Today's Windows
        </h2>
        <svg
          class="lucide lucide-info h-3.5 w-3.5 shrink-0 cursor-help"
          data-state="closed"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          style="color: rgb(17, 16, 13); opacity: 0.5;"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M12 16v-4"
          />
          <path
            d="M12 8h.01"
          />
        </svg>
      </div>
    </div>
    <div
      class="notebook"
    >
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="p-1"
        >
          <div
            class="flex items-center gap-3"
          >
            <span
              class="w-12 shrink-0 text-sm"
              data-best="true"
              style="font-family: var(--font-mono), monospace; font-weight: 700; color: rgb(17, 16, 13); opacity: 1;"
            >
              6am
            </span>
            <div
              class="relative flex h-7 min-w-0 flex-1 items-center overflow-hidden"
            >
              <div
                class="absolute inset-y-0 left-0"
                style="width: 86%; background: rgba(242, 201, 76, 0.62);"
              />
              <span
                class="relative z-10 min-w-0 truncate px-2 text-xs font-semibold"
                style="color: rgb(17, 16, 13); opacity: 1;"
              >
                Clean early
              </span>
              <span
                class="relative z-10 ml-auto hidden gap-2 whitespace-nowrap px-2 text-[10px] leading-tight sm:flex"
                style="color: rgb(17, 16, 13); opacity: 0.5;"
              >
                <span>
                  Wind E 4 mph
                </span>
                <span>
                  Swell W @ 12s
                </span>
                <span>
                  Tide 2.8 ft Incoming
                </span>
              </span>
            </div>
            <span
              class="w-16 shrink-0 whitespace-nowrap text-right text-sm font-semibold text-[#0B3A75] flex items-center"
              data-testid="primary-wave-height"
            >
              3-4 ft
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TodaysWindows captures tide-sensitive windows with tide visible in the first summary layer 1`] = `
<div>
  <div>
    <div
      class="mb-4 flex items-center justify-between gap-3"
    >
      <div
        class="flex min-w-0 items-center gap-2"
      >
        <h2
          class="label-black"
        >
          Today's Windows
        </h2>
        <svg
          class="lucide lucide-info h-3.5 w-3.5 shrink-0 cursor-help"
          data-state="closed"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          style="color: rgb(17, 16, 13); opacity: 0.5;"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M12 16v-4"
          />
          <path
            d="M12 8h.01"
          />
        </svg>
      </div>
    </div>
    <div
      class="notebook"
    >
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="p-1"
        >
          <div
            class="flex items-center gap-3"
          >
            <span
              class="w-12 shrink-0 text-sm"
              data-best="true"
              style="font-family: var(--font-mono), monospace; font-weight: 700; color: rgb(17, 16, 13); opacity: 1;"
            >
              10am
            </span>
            <div
              class="relative flex h-7 min-w-0 flex-1 items-center overflow-hidden"
            >
              <div
                class="absolute inset-y-0 left-0"
                style="width: 74%; background: rgba(242, 201, 76, 0.62);"
              />
              <span
                class="relative z-10 min-w-0 truncate px-2 text-xs font-semibold"
                style="color: rgb(17, 16, 13); opacity: 1;"
              >
                Low tide window
              </span>
              <span
                class="relative z-10 ml-auto hidden gap-2 whitespace-nowrap px-2 text-[10px] leading-tight sm:flex"
                style="color: rgb(17, 16, 13); opacity: 0.5;"
              >
                <span>
                  Wind NE 6 mph
                </span>
                <span>
                  Swell SSW @ 15s
                </span>
                <span>
                  Tide 0.7 ft Filling in
                </span>
              </span>
            </div>
            <span
              class="w-16 shrink-0 whitespace-nowrap text-right text-sm font-semibold text-[#0B3A75] flex items-center"
              data-testid="primary-wave-height"
            >
              2-3 ft
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TodaysWindows normalizes broad raw ranges and keeps wave, wind, swell, and tide scannable 1`] = `
<div>
  <div>
    <div
      class="mb-4 flex items-center justify-between gap-3"
    >
      <div
        class="flex min-w-0 items-center gap-2"
      >
        <h2
          class="label-black"
        >
          Today's Windows
        </h2>
        <svg
          class="lucide lucide-info h-3.5 w-3.5 shrink-0 cursor-help"
          data-state="closed"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          style="color: rgb(17, 16, 13); opacity: 0.5;"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M12 16v-4"
          />
          <path
            d="M12 8h.01"
          />
        </svg>
      </div>
    </div>
    <div
      class="notebook"
    >
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="p-1"
        >
          <div
            class="flex items-center gap-3"
          >
            <span
              class="w-12 shrink-0 text-sm"
              data-best="true"
              style="font-family: var(--font-mono), monospace; font-weight: 700; color: rgb(17, 16, 13); opacity: 1;"
            >
              8am
            </span>
            <div
              class="relative flex h-7 min-w-0 flex-1 items-center overflow-hidden"
            >
              <div
                class="absolute inset-y-0 left-0"
                style="width: 80%; background: rgba(242, 201, 76, 0.62);"
              />
              <span
                class="relative z-10 min-w-0 truncate px-2 text-xs font-semibold"
                style="color: rgb(17, 16, 13); opacity: 1;"
              >
                Morning glass
              </span>
              <span
                class="relative z-10 ml-auto hidden gap-2 whitespace-nowrap px-2 text-[10px] leading-tight sm:flex"
                style="color: rgb(17, 16, 13); opacity: 0.5;"
              >
                <span>
                  Wind NW 8 mph
                </span>
                <span>
                  Swell WNW @ 14s
                </span>
                <span>
                  Tide 3.2 ft Rising
                </span>
              </span>
            </div>
            <span
              class="w-16 shrink-0 whitespace-nowrap text-right text-sm font-semibold text-[#0B3A75] flex items-center"
              data-testid="primary-wave-height"
            >
              3ft
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
